# pytest-console-scripts

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest_console_scripts.py  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
pytest_console_scripts/: __init__.py
tests/: mock_console_script.py  mock_entry_point.py  test_console_scripts.py  test_run_scripts.py
